// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FreeTextResponse > renders default as expected 1`] = `
<div>
  <form
    class="free-text-response container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="free-text-response__header flex flex-col gap-4"
    >
      <span
        class="tag inline-flex items-center px-4 py-2 text-xs font-semibold w-fit !text-bluedot-normal bg-[#E5EDFE] rounded-sm uppercase"
        role="status"
      >
        Think it through
      </span>
      <div
        class="free-text-response__header-content flex flex-col gap-2"
      >
        <p
          class="free-text-response__title bluedot-h4 not-prose"
        >
          Understanding LLMs
        </p>
        <div
          class="markdown-extended-renderer prose prose-p:text-size-md prose-li:text-size-md prose-p:leading-normal prose-li:leading-normal max-w-none"
        >
          <p>
            Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
          </p>
        </div>
      </div>
    </div>
    <div
      class="free-text-response__options flex flex-col relative"
    >
      <div
        class="textarea-wrapper"
        style="position: relative; width: 100%; overflow: hidden; border-radius: 10px; z-index: 1;"
      >
        <textarea
          aria-label="Writing exercise: Understanding LLMs"
          aria-required="false"
          class="free-text-response__textarea transition-all duration-200"
          disabled=""
          name="answer"
          placeholder="Create an account to save your answers"
          style="box-sizing: border-box; width: 100%; min-height: 140px; background: #FFFFFF; border: 0.5px solid rgba(19, 19, 46, 0.25); border-radius: 10px; padding: 20px 24px; font-weight: 400; font-size: 15px; line-height: 160%; letter-spacing: -0.002em; color: #13132E; resize: vertical; outline-color: none; outline-style: none; outline-width: initial; transition: border-color 0.2s, box-shadow 0.2s; display: block;"
        />
        <div
          class="drag-notches"
          style="position: absolute; width: 15px; height: 14px; right: 8px; bottom: 8px; pointer-events: none; z-index: 2;"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 15 14"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_910_4280)"
              opacity="0.6"
            >
              <path
                d="M11.875 7L7.5 11.375"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M11 2.1875L2.6875 10.5"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
            <defs>
              <clippath
                id="clip0_910_4280"
              >
                <rect
                  fill="white"
                  height="14"
                  transform="translate(0.5)"
                  width="14"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
    <a
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose text-sm px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark free-text-response__login-cta"
      href="http://localhost:3000/login?register=true&redirect_to=%2Ftest-path"
      tabindex="0"
    >
      <span
        class="cta-button__text"
      >
        Create a free account to save your answers
      </span>
      <span
        class="cta-button__chevron ml-3"
      >
        <svg
          class="cta-button__chevron-icon size-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          />
        </svg>
      </span>
    </a>
  </form>
</div>
`;

exports[`FreeTextResponse > renders logged in as expected 1`] = `
<div>
  <form
    class="free-text-response container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="free-text-response__header flex flex-col gap-4"
    >
      <span
        class="tag inline-flex items-center px-4 py-2 text-xs font-semibold w-fit !text-bluedot-normal bg-[#E5EDFE] rounded-sm uppercase"
        role="status"
      >
        Think it through
      </span>
      <div
        class="free-text-response__header-content flex flex-col gap-2"
      >
        <p
          class="free-text-response__title bluedot-h4 not-prose"
        >
          Understanding LLMs
        </p>
        <div
          class="markdown-extended-renderer prose prose-p:text-size-md prose-li:text-size-md prose-p:leading-normal prose-li:leading-normal max-w-none"
        >
          <p>
            Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
          </p>
        </div>
      </div>
    </div>
    <div
      class="free-text-response__options flex flex-col relative"
    >
      <div
        class="textarea-wrapper"
        style="position: relative; width: 100%; overflow: hidden; border-radius: 10px; z-index: 1;"
      >
        <textarea
          aria-describedby="save-status-message"
          aria-label="Writing exercise: Understanding LLMs"
          aria-required="false"
          class="free-text-response__textarea transition-all duration-200"
          name="answer"
          placeholder="Enter your answer here"
          style="box-sizing: border-box; width: 100%; min-height: 140px; background: #FFFFFF; border: 0.5px solid rgba(19, 19, 46, 0.25); border-radius: 10px; padding: 20px 24px; font-weight: 400; font-size: 15px; line-height: 160%; letter-spacing: -0.002em; color: #13132E; resize: vertical; outline-color: none; outline-style: none; outline-width: initial; transition: border-color 0.2s, box-shadow 0.2s; display: block;"
        />
        <div
          class="drag-notches"
          style="position: absolute; width: 15px; height: 14px; right: 8px; bottom: 8px; pointer-events: none; z-index: 2;"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 15 14"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_910_4280)"
              opacity="0.6"
            >
              <path
                d="M11.875 7L7.5 11.375"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M11 2.1875L2.6875 10.5"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
            <defs>
              <clippath
                id="clip0_910_4280"
              >
                <rect
                  fill="white"
                  height="14"
                  transform="translate(0.5)"
                  width="14"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FreeTextResponse > renders with saved exercise response 1`] = `
<div>
  <form
    class="free-text-response container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="free-text-response__header flex flex-col gap-4"
    >
      <span
        class="tag inline-flex items-center px-4 py-2 text-xs font-semibold w-fit !text-bluedot-normal bg-[#E5EDFE] rounded-sm uppercase"
        role="status"
      >
        Think it through
      </span>
      <div
        class="free-text-response__header-content flex flex-col gap-2"
      >
        <p
          class="free-text-response__title bluedot-h4 not-prose"
        >
          Understanding LLMs
        </p>
        <div
          class="markdown-extended-renderer prose prose-p:text-size-md prose-li:text-size-md prose-p:leading-normal prose-li:leading-normal max-w-none"
        >
          <p>
            Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
          </p>
        </div>
      </div>
    </div>
    <div
      class="free-text-response__options flex flex-col relative"
    >
      <div
        class="textarea-wrapper"
        style="position: relative; width: 100%; overflow: hidden; border-radius: 10px; z-index: 1;"
      >
        <textarea
          aria-describedby="save-status-message"
          aria-label="Writing exercise: Understanding LLMs"
          aria-required="false"
          class="free-text-response__textarea transition-all duration-200"
          name="answer"
          placeholder="Enter your answer here"
          style="box-sizing: border-box; width: 100%; min-height: 140px; background: #FFFFFF; border: 0.5px solid rgba(19, 19, 46, 0.25); border-radius: 10px; padding: 20px 24px; font-weight: 400; font-size: 15px; line-height: 160%; letter-spacing: -0.002em; color: #13132E; resize: vertical; outline-color: none; outline-style: none; outline-width: initial; transition: border-color 0.2s, box-shadow 0.2s; display: block;"
        />
        <div
          class="drag-notches"
          style="position: absolute; width: 15px; height: 14px; right: 8px; bottom: 8px; pointer-events: none; z-index: 2;"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 15 14"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_910_4280)"
              opacity="0.6"
            >
              <path
                d="M11.875 7L7.5 11.375"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M11 2.1875L2.6875 10.5"
                stroke="#13132E"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
            <defs>
              <clippath
                id="clip0_910_4280"
              >
                <rect
                  fill="white"
                  height="14"
                  transform="translate(0.5)"
                  width="14"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
  </form>
</div>
`;
